Fixed panel moving behind invisible wall

--- a/style.css
+++ b/style.css
@@ -28,17 +28,14 @@
 body {
     background-color: var(--grayblue);
     color: var(--brightyellow);
+    position: relative;
 }
 
-#box {
-    display: flex;
-    flex-flow: column;
-}
+
 
 .header {
     background-color: var(--purpblue);
     padding: 1vh;
-    flex: 0 1 auto;
     box-shadow: 0 0 2px black;
     z-index: 10;
 }
@@ -62,7 +59,6 @@ nav ul {
     padding: 0;
     list-style-type: none;
     margin: 1rem 0;
-    flex: 1 1 auto;
 }
 
 nav ul li {
@@ -102,25 +98,21 @@ main {
     margin: auto;
     height: 85%;
     width: 80%;
-    position: relative;
-    flex: 0 1 auto;
-}
-
-canvas {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
 }
 
 .parent {
-    margin: auto;
+    position: absolute;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
     margin-top: 1vh;
     background-color: var(--purpblue);
-    height: 85%;
+    height: 70vh;
+    width: 50vw;
     overflow-y: scroll;
     border-radius: 10px;
     box-shadow: 0 0 5px black;
-    overflow-x: visible;
 }
 
 .bio {
@@ -154,7 +146,6 @@ canvas {
 
 #swipesection {
     position: absolute;
-
 }
 
 .gamestats {
@@ -290,6 +281,10 @@ canvas {
     main {
         width: 75%;
     }
+    .parent {
+        width: 60%;
+        height: 65%;
+    }
     nav ul li {
         width: 15vw;
     }
@@ -302,6 +297,10 @@ canvas {
     }
     #carousel {
         width: 95%;
+    }
+    .parent {
+        width: 95%;
+        height: 70%;
     }
     nav ul li {
         width: 20vw;
